--- a/src/pages/docs/t7/6-tour.mdx
+++ b/src/pages/docs/t7/6-tour.mdx
@@ -6,6 +6,8 @@ import Map from '@/components/map';
 
 ## SURATTHANI 1
 
+<Map driving={["9.1438932,99.3283169,Surat Thani Transport Station","8.9006588,98.5198817,Khao Sok Bus Stop","8.6668406,98.2527142,Khao Lak"]} /> 
+
 ## KOH SIMILAN 2
 
 Manta Queen 1 - Khao Lak - Phuket bus terminal 2 - By minibus of Scuba Adventures.
