--- a/src/pages/docs/t7/6-tour.mdx
+++ b/src/pages/docs/t7/6-tour.mdx
@@ -10,9 +10,9 @@ import Map from '@/components/map';
 
 ## KOH SIMILAN 2
 
-Manta Queen 1 - Khao Lak - Phuket bus terminal 2 - By minibus of Scuba Adventures.
-Bus terminal - Krabi - By night bus to Hat Yai, arrive hotel at 2 a.m.
-Awake at 5 a.m, Krabi Lomprayah's bus terminal - Donsak Pier - Koh Phangan - Thong Sala Pier -  reach Rin Nai Beach around noon.
+Manta Queen 1 - Khao Lak - Phuket bus terminal 2, by Scuba Adventures' mini bus.
+Bus terminal - Krabi(by bus to Hat Yai), walked to Krabi town at 2 a.m.
+Awaked at 5 a.m, Lomprayah's bus terminal - Donsak Pier - Koh Phangan Thong Sala Pier - Rin Nai Beach.
 541km, 18 hrs, of course short sleep, a carefully caculately roadmap, a great escape, what do you want?
 
 <Map driving={[ '8.644791,98.251189,Khao Lak Scuba Adventures', '7.917718,98.395462,Phuket Bus Terminal 2', '8.102171,98.907734,Krabi', '8.077127,98.904208,Lomprayah', '9.318253,99.736982,Donsak', '9.709127,99.984432,Thong Sala', '9.671759,100.067371,Rin Nai', ]} />
