--- a/src/pages/docs/t7/6-tour.mdx
+++ b/src/pages/docs/t7/6-tour.mdx
@@ -11,7 +11,7 @@ import Map from '@/components/map';
 ## KOH SIMILAN 2
 
 Manta Queen 1 - Khao Lak - Phuket bus terminal 2, by Scuba Adventures' mini bus.
-Bus terminal - Krabi(by bus to Hat Yai), walked to Krabi town at 2 a.m.
+Bus terminal - Krabi, by bus to Hat Yai, walked to Krabi town at 2 a.m.
 Awaked at 5 a.m, Lomprayah's bus terminal - Donsak Pier - Koh Phangan Thong Sala Pier - Rin Nai Beach.
 
 541km, 18 hrs, of course short sleep, a carefully caculately roadmap, a great escape, what do you want?
