--- a/src/pages/docs/t7/6-tour.mdx
+++ b/src/pages/docs/t7/6-tour.mdx
@@ -1,4 +1,5 @@
 import Map from '@/components/map';
+import HotelNights from '@/components/hotel-nights';
 
 ## TOUR SIX SEXY
 
@@ -21,5 +22,7 @@ Awaked at 5 a.m, Lomprayah's bus terminal - Donsak Pier - Koh Phangan Thong Sala
 <Map driving={[ '8.644791,98.251189,Khao Lak Scuba Adventures', '7.917718,98.395462,Phuket Bus Terminal 2', '8.102171,98.907734,Krabi', '8.077127,98.904208,Lomprayah', '9.318253,99.736982,Donsak', '9.709127,99.984432,Thong Sala', '9.671759,100.067371,Rin Nai', ]} />
 
 ## KOH PHANGAN 2
+
+<HotelNights date={'2017-1-12'} nights={5} />
 
 ## BANGKOK
