--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -1,11 +1,10 @@
 import Map from '@/components/map';
 import Cryptor from '@/components/cryptor';
 import HotelNights from '@/components/hotel-nights';
-import thebeach2000 from '@/assets/beach.png';
 import sara from '@/assets/sara.jpg';
 import Latu from '@/assets/latu.jpg';
 
-# TOUR 1 SOLITARY
+# TOUR SOLITARY
 ## BANGKOK 1
 
 <HotelNights date={'2013-10-8'} nights={4} />
@@ -32,9 +31,7 @@ _- The Beach, 2000_
   <Cryptor>0f3aebde</Cryptor>
 </p>
 
-<img src={thebeach2000} />
-
-## SUKHOTHAI 1
+## SUKHOTHAI
 
 Bus stop in downtown, I head to songthaew.
 I asked a discount to ancient city, driver said yes.
