--- a/src/pages/docs/t7/3-tour.mdx
+++ b/src/pages/docs/t7/3-tour.mdx
@@ -1,3 +1,6 @@
+import HotelNights from '@/components/hotel-nights';
+import thebeach2000 from '@/assets/beach.png';
+
 # TOUR THREE HOUSE
 
 ## BANGKOK
@@ -9,5 +12,11 @@
 ## BANGKOK
 
 ## KOH TAO
+
+## Moondance
+
+<HotelNights date={'2014-11-12'} nights={1} />
+
+<img src={thebeach2000} />
 
 ## BANGKOK
