--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -19,6 +19,8 @@ _"What do you want? Sell passport? Tickets? You want silk? I'll take you to the 
 
 _I was traveling alone. Being alone allows me more opportunity to absorb your experience on your person level._
 
+_What are you doing in thailand? tourist? You go to patpong? See smoke from pussy, ping pong ball from pussy, razor blade from pussy; bird from pussy. Why not? Thai girls best in the world. Thai food best in the world. Thai dope best in the world._
+
 _- The Beach, 2000_
 
 ### PRATUNAM
