--- a/src/pages/docs/t7/3-tour.mdx
+++ b/src/pages/docs/t7/3-tour.mdx
@@ -17,6 +17,10 @@ import thebeach2000 from '@/assets/beach.png';
 
 <HotelNights date={'2014-11-12'} nights={1} />
 
+_The room is in darkness. Moonlight penetrates the threadbare curtain. The bed is surrounded by a mosquito net._
+
+_Just visible through the net is the outline of two human forms entwined._
+
 <img src={thebeach2000} />
 
 ## BANGKOK
