--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -71,11 +71,11 @@ Soon, I arrived.
 
 *It belongs to a very kind family.*
 *Good place, just behind Tourist Center.*
-*It's minutes riding to sights.*
+*Minutes riding to sights.*
 *I rent a bike for only 50 baht.*
 *Garden house with breakfast.*
 *The daughter of house owner is really beautiful.*
-*I still remember the golden doggy Latu and the pussy momo.*
+*I still remember the golden doggy Latu and the pussy Momo.*
 
 _- My review on agoda.com_
 
