--- a/src/pages/docs/t7/3-tour.mdx
+++ b/src/pages/docs/t7/3-tour.mdx
@@ -7,6 +7,14 @@ import thebeach2000 from '@/assets/beach.png';
 
 ## CHIANG MAI
 
+_You are far from home._
+_You meet a girl._
+_It's exciting, why not?_
+_You are attracted to her - it's in your eyes._
+_Perhaps in hers as well._
+_So you think something might happen; it's easy to believe, it's exciting._
+_But she has a boyfriend so you are jealous._
+
 ### TREE HOUSES
 
 ## BANGKOK
