--- a/src/pages/docs/t7/4-tour.mdx
+++ b/src/pages/docs/t7/4-tour.mdx
@@ -6,6 +6,9 @@ import fullmoon1 from '@/assets/fullmoon-1.jpg';
 
 ## KOH TAO
 
+You think I waste time taking photographs of the sky.
+One night I will get the perfect photograph.
+
 ### FULLMOON PARTY
 
 <img src={fullmoon1} />
