--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -25,6 +25,9 @@ _- The Beach, 2000_
 
 <HotelNights date={'2013-10-08'} nights={4} />
 
+I am listening to the sound of upstairs engaging in noisy sex.
+They reach the climax of their activity and fall silent.
+
 <p>
   <Cryptor>0f3aebde</Cryptor>
 </p>
