--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -25,7 +25,10 @@ _- The Beach, 2000_
 
 <HotelNights date={'2013-10-08'} nights={4} />
 
-I am listening to the sound of upstairs engaging in noisy sex.
+I lies on the bed,
+ listening to the sound of upstairs engaging in noisy sex.
+I just has time to enjoy the
+ "silence" after turning air-conditioning and television on.
 They reach the climax of their activity and fall silent.
 
 <p>
