--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -25,7 +25,8 @@ _- The Beach, 2000_
 
 <HotelNights date={'2013-10-08'} nights={4} />
 
-Noise can be heard through the sealed window of 9th floor.
+Noises can be heard through the sealed window of 9th floor.
+Road racers, traffic control whistle, consrtuction, people drunk and the air-conditioning...
 
 <p>
   <Cryptor>0f3aebde</Cryptor>
