--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -119,9 +119,8 @@ I'm riding in the road and say 'hello' to everyone I saw..
 ### PRATUNAM 2
 
 I can't sleep.
-I lies on the bed,
- listening to the sound of upstairs engaging in noisy sex.
-Their noise did keep me awake, but he's on holiday.
+I lies on the bed, listening to the sound of upstairs engaging in noisy sex.
+He and his Thai girl did keep me awake. That's Okay, he's on holiday.
 I just has time to enjoy the
  "silence" after turning air-conditioning and television on.
 Then they reach the climax of their activity and fall silent.
