--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -26,7 +26,7 @@ _- The Beach, 2000_
 <HotelNights date={'2013-10-08'} nights={4} />
 
 Noises can be heard through the sealed window of 9th floor.
-Road racers, traffic control whistle, consrtuction, people drunk and the air-conditioning...
+Road racers, traffic whistle, slamming door and the air-conditioning...
 
 <p>
   <Cryptor>0f3aebde</Cryptor>
@@ -120,7 +120,6 @@ I'm riding in the road and say 'hello' to everyone I saw..
 
 I can't sleep.
 I lies on the bed, listening to the sound of upstairs engaging in noisy sex.
-He and his Thai girl did keep me awake. That's Okay, he's on holiday.
-I just has time to enjoy the
- "silence" after turning air-conditioning and television on.
+He and his Thai girl did keep me awake. That's Ok, he's on holiday.
+I just has time to enjoy the "silence" after turning air-conditioning and television on.
 Then they reach the climax of their activity and fall silent.
