--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -25,8 +25,8 @@ _- The Beach, 2000_
 
 <HotelNights date={'2013-10-08'} nights={4} />
 
+Road racers, traffic whistle, dove and the air-conditioning.
 Noises can be heard through the sealed window of 9th floor.
-Road racers, traffic whistle, slamming door and the air-conditioning...
 
 #### Unnie
 
