--- a/src/pages/docs/t7/0-preface.mdx
+++ b/src/pages/docs/t7/0-preface.mdx
@@ -7,5 +7,8 @@ import Cryptor from '@/components/cryptor';
 
 <HotelNights date={'2013-6-5'} nights={1} />
 
-I pressed my ear against the door and listened attentively to the next room.
-I <Cryptor>1130fddab2b81aad0407</Cryptor>.
+<Cryptor>3275ffc3b2af49a706412d6df58dc65338a1b97a7ada172a049ad2c8a48fc18e7b1f663bea02862aa6202a8bd53bd1cd49ed4efaf640acfc4a6c26887e27f45ea8805e8f1c18a25b2fe70861</Cryptor>
+
+## THE BEACH
+
+Inspired by THE BEACH.
