--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -15,7 +15,16 @@ _"I'll be Ok, thanks."_
 
 _"What do you want? Sell passport? Tickets? You want silk? I'll take you to the best silk place? Diamonds? Come with me, get presents for girlfriend. Maybe no girlfriend. You want a girl, no problem. Good time. Boy girl fucking no problem..."_
 
-_I was traveling alone. Being alone allows me more opportunity to absorb your experience on your person level._
+_I was traveling alone for two
+ reasons. First of all, being alone
+ allows you more opportunity to
+ absorb your experiences on a
+ personal level._
+_Secondly, and this
+ I felt acutely at that moment,
+ there was no one who wanted to go
+ with me.
+_
 
 _What are you doing in thailand? Tourist? You go to Patpong? See smoke from pussy, ping pong ball from pussy, razor blade from pussy; bird from pussy. Why not? Thai girls best in the world. Thai food best in the world. Thai dope best in the world._
 
