--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -23,8 +23,7 @@ _I was traveling alone for two
 _Secondly, and this
  I felt acutely at that moment,
  there was no one who wanted to go
- with me.
-_
+ with me._
 
 _What are you doing in thailand? Tourist? You go to Patpong? See smoke from pussy, ping pong ball from pussy, razor blade from pussy; bird from pussy. Why not? Thai girls best in the world. Thai food best in the world. Thai dope best in the world._
 
