--- a/src/pages/docs/t7/3-tour.mdx
+++ b/src/pages/docs/t7/3-tour.mdx
@@ -1,5 +1,6 @@
 import HotelNights from '@/components/hotel-nights';
 import thebeach2000 from '@/assets/beach.png';
+import Map from '@/components/map'; 
 
 # TOUR THREE HOUSE
 
@@ -24,6 +25,8 @@ _But she has a boyfriend so you are jealous._
 ## Moondance
 
 <HotelNights date={'2014-11-12'} nights={1} />
+
+<Map walking={['10.085781,99.825095,Crystal Dive', '10.0780687,99.8458561,Moondance Magic View Bungalow']} />
 
 _The room is in darkness. Moonlight penetrates the threadbare curtain. The bed is surrounded by a mosquito net._
 
