--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -96,7 +96,7 @@ _- My review on agoda.com_
 
 <img src={Latu} />
 
-_guest with doggy met Latu, from @thongmuanthecrispyrolldog_
+_@thongmuanthecrispyrolldog_
 
 Night, family play cards in parents‘ house.
 They invite me even I can't play.
