--- a/src/pages/docs/t7/3-tour.mdx
+++ b/src/pages/docs/t7/3-tour.mdx
@@ -30,6 +30,7 @@ _But she has a boyfriend so you are jealous._
 <Map walking={['10.085781,99.825095,Crystal Dive', '10.0780687,99.8458561,Moondance Magic View Bungalow']} />
 
 <img src={moondance} />
+_@naootsubo_
 
 _The room is in darkness. Moonlight penetrates the threadbare curtain. The bed is surrounded by a mosquito net._
 
