--- a/src/pages/docs/t7/3-tour.mdx
+++ b/src/pages/docs/t7/3-tour.mdx
@@ -41,6 +41,6 @@ _Just visible through the net is the outline of two human forms entwined._
 
 <img src={thebeach2000} />
 
-#THE BEACH#
+_#THE BEACH#_
 
 ## BANGKOK
