--- a/src/pages/docs/t7/3-tour.mdx
+++ b/src/pages/docs/t7/3-tour.mdx
@@ -19,6 +19,8 @@ _But she has a boyfriend so you are jealous._
 
 ### TREE HOUSES
 
+<HotelNights date={'2014-11-04'} nights={1} />
+
 ## BANGKOK
 
 ## KOH TAO
