--- a/src/pages/docs/t7/3-tour.mdx
+++ b/src/pages/docs/t7/3-tour.mdx
@@ -1,7 +1,9 @@
 import HotelNights from '@/components/hotel-nights';
 import thebeach2000 from '@/assets/beach.png';
 import moondance from '@/assets/moondance.jpg';
-import Map from '@/components/map'; 
+import Map from '@/components/map';
+import treehouse1 from '@/assets/treehouse-1.jpg';
+import treehouse2 from '@/assets/treehouse-2.jpg';
 
 # TOUR THREE HOUSE
 
@@ -20,6 +22,10 @@ _But she has a boyfriend so you are jealous._
 ### TREE HOUSES
 
 <HotelNights date={'2014-11-04'} nights={1} />
+
+<img src={treehouse1} />
+
+<img src={treehouse2} />
 
 ## BANGKOK
 
