--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -36,17 +36,13 @@ _- The Beach, 2000_
 Road racers, traffic whistle, dove and the air-conditioning.
 Noises can be heard through the sealed window of 9th floor.
 
-#### Unnie
+### COWBOY
+
+### NANA
+
+### UNNIE
 
 <Cryptor>2e3be1d8b2fc71b70e0d217aa09cd34979b0b17574</Cryptor>
-
-<p>
-  <Cryptor>0f3aebde</Cryptor>
-</p>
-
-<p>
-  <Cryptor>0f3aebde</Cryptor>
-</p>
 
 ## SUKHOTHAI
 
@@ -113,6 +109,8 @@ That have a lot of funny.
 Morning, I'm riding east.
 I found a local path which have banglows along.
 I'm riding in the road and say 'hello' to everyone I saw..
+
+### ON THE ROAD
 
 ## CHIANG MAI 1
 
