--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -40,7 +40,7 @@ Noises can be heard through the sealed window of 9th floor.
 
 ### UNNIE
 
-<$.Cryptor>2e3be1d8b2fc71b70e0d217aa09cd34979b0b17574</Cryptor>
+<$.Cryptor>2e3be1d8b2fc71b70e0d217aa09cd34979b0b17574</$.Cryptor>
 
 ## SUKHOTHAI
 
@@ -112,7 +112,7 @@ I'm riding in the road and say 'hello' to everyone I saw..
 
 ## CHIANG MAI 1
 
-<$.Cryptor>363aeb</Cryptor>, her name.
+<$.Cryptor>363aeb</$.Cryptor>, her name.
 
 <img src={sara} />
 
