--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -1,4 +1,4 @@
-import $ from '@/components';
+import C from '@/components';
 import sara from '@/assets/sara.jpg';
 import Latu from '@/assets/latu.jpg';
 
@@ -29,7 +29,7 @@ _- The Beach, 2000_
 
 ### PRATUNAM
 
-<$.HotelNights date={'2013-10-08'} nights={4} />
+<C.HotelNights date={'2013-10-08'} nights={4} />
 
 Road racers, traffic whistle, dove and the air-conditioning.
 Noises can be heard through the sealed window of 9th floor.
@@ -40,7 +40,7 @@ Noises can be heard through the sealed window of 9th floor.
 
 ### UNNIE
 
-<$.Cryptor>2e3be1d8b2fc71b70e0d217aa09cd34979b0b17574</$.Cryptor>
+<C.Cryptor>2e3be1d8b2fc71b70e0d217aa09cd34979b0b17574</C.Cryptor>
 
 ## SUKHOTHAI
 
@@ -72,11 +72,11 @@ It should be what he teach I think.
 
 Soon, I arrived.
 
-<$.Map driving={[ '17.030496,99.702936,Tourist Information Center', '17.032004,99.702915,_', '17.031670,99.706329,Baan Rim Klong Resort', ]} />
+<C.Map driving={[ '17.030496,99.702936,Tourist Information Center', '17.032004,99.702915,_', '17.031670,99.706329,Baan Rim Klong Resort', ]} />
 
 ### Baan Rim Klong Resort
 
-<$.HotelNights date={'2013-10-12'} nights={2} />
+<C.HotelNights date={'2013-10-12'} nights={2} />
 
 *It belongs to a very kind family.*
 *Good place, just behind Tourist Center.*
@@ -112,7 +112,7 @@ I'm riding in the road and say 'hello' to everyone I saw..
 
 ## CHIANG MAI 1
 
-<$.Cryptor>363aeb</$.Cryptor>, her name.
+<C.Cryptor>363aeb</C.Cryptor>, her name.
 
 <img src={sara} />
 
