--- a/src/pages/docs/t7/0-preface.mdx
+++ b/src/pages/docs/t7/0-preface.mdx
@@ -1,13 +1,12 @@
-import HotelNights from '@/components/hotel-nights';
-import Cryptor from '@/components/cryptor';
+import C from '@/components';
 
 # PREFACE
 
 ## FISHES & PEBBLES
 
-<HotelNights date={'2013-6-5'} nights={1} />
+<C.HotelNights date={'2013-6-5'} nights={1} />
 
-<Cryptor>3275ffc3b2af49a706412d6df58dc65338a1b97a7ada172a049ad2c8a48fc18e7b1f663bea02862aa6202a8bd53bd1cd49ed4efaf640acfc4a6c26887e27f45ea8805e8f1c18a25b2fe70861</Cryptor>
+<C.Cryptor>3275ffc3b2af49a706412d6df58dc65338a1b97a7ada172a049ad2c8a48fc18e7b1f663bea02862aa6202a8bd53bd1cd49ed4efaf640acfc4a6c26887e27f45ea8805e8f1c18a25b2fe70861</C.Cryptor>
 
 ## THE BEACH
 
