--- a/src/pages/docs/t7/3-tour.mdx
+++ b/src/pages/docs/t7/3-tour.mdx
@@ -1,7 +1,6 @@
-import HotelNights from '@/components/hotel-nights';
+import C from '@/components';
 import thebeach2000 from '@/assets/beach.png';
 import moondance from '@/assets/moondance.jpg';
-import Map from '@/components/map';
 import treehouse1 from '@/assets/treehouse-1.jpg';
 import treehouse2 from '@/assets/treehouse-2.jpg';
 
@@ -21,7 +20,7 @@ _But she has a boyfriend so you are jealous._
 
 ### TREE HOUSES
 
-<HotelNights date={'2014-11-04'} nights={1} />
+<C.HotelNights date={'2014-11-04'} nights={1} />
 
 <img src={treehouse1} />
 
@@ -33,9 +32,9 @@ _But she has a boyfriend so you are jealous._
 
 ## Moondance
 
-<HotelNights date={'2014-11-12'} nights={1} />
+<C.HotelNights date={'2014-11-12'} nights={1} />
 
-<Map walking={['10.085781,99.825095,Crystal Dive', '10.0780687,99.8458561,Moondance Magic View Bungalow']} />
+<C.Map walking={['10.085781,99.825095,Crystal Dive', '10.0780687,99.8458561,Moondance Magic View Bungalow']} />
 
 ...
 
