--- a/src/pages/docs/t7/6-tour.mdx
+++ b/src/pages/docs/t7/6-tour.mdx
@@ -1,5 +1,4 @@
-import Map from '@/components/map';
-import HotelNights from '@/components/hotel-nights';
+import C from '@/components';
 
 ## TOUR SIX SEXY
 
@@ -9,7 +8,7 @@ import HotelNights from '@/components/hotel-nights';
 
 Surat Thani Transport Station - Khao Lak
 
-<Map driving={["9.1438932,99.3283169,Surat Thani Transport Station","8.9006588,98.5198817,Khao Sok Bus Stop","8.6668406,98.2527142,Khao Lak"]} /> 
+<C.Map driving={["9.1438932,99.3283169,Surat Thani Transport Station","8.9006588,98.5198817,Khao Sok Bus Stop","8.6668406,98.2527142,Khao Lak"]} />
 
 ## KOH SIMILAN 2
 
@@ -19,10 +18,10 @@ Awaked at 5 a.m, Lomprayah's bus terminal - Donsak Pier - Koh Phangan Thong Sala
 
 541km, 18 hrs, of course short sleep, a carefully caculately roadmap, a great escape, what do you want?
 
-<Map driving={[ '8.644791,98.251189,Khao Lak Scuba Adventures', '7.917718,98.395462,Phuket Bus Terminal 2', '8.102171,98.907734,Krabi', '8.077127,98.904208,Lomprayah', '9.318253,99.736982,Donsak', '9.709127,99.984432,Thong Sala', '9.671759,100.067371,Rin Nai', ]} />
+<C.Map driving={[ '8.644791,98.251189,Khao Lak Scuba Adventures', '7.917718,98.395462,Phuket Bus Terminal 2', '8.102171,98.907734,Krabi', '8.077127,98.904208,Lomprayah', '9.318253,99.736982,Donsak', '9.709127,99.984432,Thong Sala', '9.671759,100.067371,Rin Nai', ]} />
 
 ## KOH PHANGAN 2
 
-<HotelNights date={'2017-1-12'} nights={5} />
+<C.HotelNights date={'2017-1-12'} nights={5} />
 
 ## BANGKOK
