--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -1,6 +1,4 @@
 import C from '@/components';
-import sara from '@/assets/sara.jpg';
-import Latu from '@/assets/latu.jpg';
 
 # TOUR SOLITARY
 ## BANGKOK 1
@@ -88,7 +86,7 @@ Soon, I arrived.
 
 _- My review on agoda.com_
 
-<img src={Latu} />
+<C.Img src={'latu.jpg'} />
 
 _@thongmuanthecrispyrolldog_
 
@@ -118,7 +116,7 @@ I'm riding in the road and say 'hello' to everyone I saw..
 
 <C.Cryptor>363aeb</C.Cryptor>, her name.
 
-<img src={sara} />
+<C.Img src={'sara.jpg'} />
 
 _#SARA#_
 
