--- a/src/pages/docs/t7/3-tour.mdx
+++ b/src/pages/docs/t7/3-tour.mdx
@@ -1,9 +1,4 @@
 import C from '@/components';
-import thebeach2000 from '@/assets/beach.png';
-import moondance from '@/assets/moondance.jpg';
-import treehouse1 from '@/assets/treehouse-1.jpg';
-import treehouse2 from '@/assets/treehouse-2.jpg';
-
 # TOUR THREE HOUSE
 
 ## BANGKOK
@@ -22,9 +17,9 @@ _But she has a boyfriend so you are jealous._
 
 <C.HotelNights date={'2014-11-04'} nights={1} />
 
-<img src={treehouse1} />
+<C.Img src={'treehouse-1.jpg'} />
 
-<img src={treehouse2} />
+<C.Img src={'treehouse-2.jpg'} />
 
 ## BANGKOK
 
@@ -38,7 +33,7 @@ _But she has a boyfriend so you are jealous._
 
 ...
 
-<img src={moondance} />
+<C.Img src={'moondance.jpg'} />
 
 _@naootsubo_
 
@@ -46,7 +41,7 @@ _The room is in darkness. Moonlight penetrates the threadbare curtain. The bed i
 
 _Just visible through the net is the outline of two human forms entwined._
 
-<img src={thebeach2000} />
+<C.Img src={'beach.png'} />
 
 _#THE BEACH#_
 
