--- a/src/pages/docs/t7/4-tour.mdx
+++ b/src/pages/docs/t7/4-tour.mdx
@@ -1,4 +1,4 @@
-import fullmoon1 from '@/assets/fullmoon-1.jpg';
+import C from '@/components';
 
 # TOUR FOUR SOUL
 
@@ -11,7 +11,7 @@ One night I will get the perfect photograph.
 
 ### FULLMOON PARTY
 
-<img src={fullmoon1} />
+<C.Img src={'fullmoon-1.jpg'} />
 
 ## KRABI
 
