--- a/src/pages/docs/t7/7-tour.mdx
+++ b/src/pages/docs/t7/7-tour.mdx
@@ -1,4 +1,4 @@
-import vickyfish from '@/assets/vicky-fish.png';
+import C from '@/components';
 
 # TOUR SENVEN MEMORY
 
@@ -28,6 +28,6 @@ green dreadlocks on Songkran
 
 green dreadlocks in dark
 
-<img src={vickyfish} />
+<C.Img src={'vicky-fish.png'} />
 
 ## SONGKRAN 205X
