--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -1,5 +1,4 @@
-import mabul1 from '@/assets/mabul-1.jpg';
-import mabul2 from '@/assets/mabul-2.jpg';
+import C from '@/components';
 
 # TOUR TWO BACKPACKER
 
@@ -9,8 +8,8 @@ import mabul2 from '@/assets/mabul-2.jpg';
 
 ## MABUL 1
 
-<img src={mabul1} />
-<img src={mabul2} />
+<C.Img src={'mabul-1.jgp'} />
+<C.Img src={'mabul-2.jpg'} />
 
 ## KOTA KINABALU 2
 
