--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -6,12 +6,16 @@ import C from '@/components';
 
 ## KOTA KINABALU 1
 
+<C.Cryptor>3634fdd8beb043ac07410e73</C.Cryptor>
+
 ## MABUL 1
 
 <C.Img src={'mabul-1.jgp'} />
 <C.Img src={'mabul-2.jpg'} />
 
 ## KOTA KINABALU 2
+
+### MAEILYNE
 
 ## GERGORE TOWN
 
