--- a/src/pages/docs/t7/3-tour.mdx
+++ b/src/pages/docs/t7/3-tour.mdx
@@ -26,6 +26,8 @@ _But she has a boyfriend so you are jealous._
 
 ## KOH TAO
 
+<C.CImg src="kohtao1.jpg" />
+
 ## Moondance
 
 <C.HotelNights date={'2014-11-12'} nights={1} />
