--- a/src/pages/docs/t7/7-tour.mdx
+++ b/src/pages/docs/t7/7-tour.mdx
@@ -28,6 +28,8 @@ green dreadlocks on Songkran
 
 green dreadlocks in dark
 
+<C.CImg src="IMG_20170413_234141.jpg" />
+
 <C.Img src={'vicky-fish.png'} />
 
 ## SONGKRAN 205X
