--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -112,13 +112,18 @@ I'm riding in the road and say 'hello' to everyone I saw..
 
 ### SARA
 
-<C.Map points={['18.7840584,98.9978128,16']} />
-
-<C.Cryptor>363aeb</C.Cryptor>, her name.
+I'm told that most single girls here are looking for Farangs,
+thai girls learn about "Farangs" when they are small.
+If one finds a Farangs boyfriend or husband, who is willing to pay on her behalf.
+She can build a big house back home. A "Farangs" is a simply a "sugar daddy" to them.
 
 <C.Img src={'sara.jpg'} />
 
 _#SARA#_
+
+<C.Map points={['18.7840584,98.9978128,16']} />
+
+<C.Cryptor>363aeb</C.Cryptor>, her name.
 
 <C.CImg src="mob.jpg" />
 
