--- a/src/pages/docs/t7/7-tour.mdx
+++ b/src/pages/docs/t7/7-tour.mdx
@@ -28,8 +28,10 @@ green dreadlocks on Songkran
 
 green dreadlocks in dark
 
-<C.CImg src="IMG_20170413_234141.jpg" />
-
 <C.Img src={'vicky-fish.png'} />
+
+<C.CImg src="2c3deadff7af52a742122163f59ccf406ce0ae747fd1443142ced7c4ea8e8e80675b2727eb43862aaf312bc5f97f86cd4eb94cfbeb47bdb9527a268f656ee35dedc95e9e0b4cea4c32a445" />
+
+<C.CImg src="IMG_20170413_234141.jpg" />
 
 ## SONGKRAN 205X
