--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -1,6 +1,7 @@
 import C from '@/components';
 
 # TOUR SOLITARY
+
 ## BANGKOK 1
 
 _Bangkok, good-time city. Gateway to Southeast Asia. Where dollars and Duetsmarks get turned into counterfeit watches and genuine scars._
@@ -12,14 +13,14 @@ _"I'll be Ok, thanks."_
 _"What do you want? Sell passport? Tickets? You want silk? I'll take you to the best silk place? Diamonds? Come with me, get presents for girlfriend. Maybe no girlfriend. You want a girl, no problem. Good time. Boy girl fucking no problem..."_
 
 _I was traveling alone for two
- reasons. First of all, being alone
- allows you more opportunity to
- absorb your experiences on a
- personal level._
+reasons. First of all, being alone
+allows you more opportunity to
+absorb your experiences on a
+personal level._
 _Secondly, and this
- I felt acutely at that moment,
- there was no one who wanted to go
- with me._
+I felt acutely at that moment,
+there was no one who wanted to go
+with me._
 
 _What are you doing in thailand? Tourist? You go to Patpong? See smoke from pussy, ping pong ball from pussy, razor blade from pussy; bird from pussy. Why not? Thai girls best in the world. Thai food best in the world. Thai dope best in the world._
 
@@ -70,19 +71,25 @@ It should be what he teach I think.
 
 Soon, I arrived.
 
-<C.Map driving={[ '17.030496,99.702936,Tourist Information Center', '17.032004,99.702915,_', '17.031670,99.706329,Baan Rim Klong Resort', ]} />
+<C.Map
+  driving={[
+    '17.030496,99.702936,Tourist Information Center',
+    '17.032004,99.702915,_',
+    '17.031670,99.706329,Baan Rim Klong Resort',
+  ]}
+/>
 
 ### Baan Rim Klong Resort
 
 <C.HotelNights date={'2013-10-12'} nights={2} />
 
-*It belongs to a very kind family.*
-*Good place, just behind Tourist Center.*
-*Minutes riding to sights.*
-*I rent a bike for only 50 baht.*
-*Garden house with breakfast.*
-*The daughter of house owner is really beautiful.*
-*I still remember the golden doggy Latu and the pussy Momo.*
+_It belongs to a very kind family._
+_Good place, just behind Tourist Center._
+_Minutes riding to sights._
+_I rent a bike for only 50 baht._
+_Garden house with breakfast._
+_The daughter of house owner is really beautiful._
+_I still remember the golden doggy Latu and the pussy Momo._
 
 _- My review on agoda.com_
 
@@ -122,9 +129,7 @@ She can build a big house back home. A "Farangs" is a simply a "sugar daddy" to 
 _#SARA#_
 
 <C.Map points={['18.7840584,98.9978128,16']} />
-
 <C.Cryptor>363aeb</C.Cryptor>, her name.
-
 <C.CImg src="mob.jpg" />
 
 ### LUCKY
