--- a/src/pages/docs/t7/3-tour.mdx
+++ b/src/pages/docs/t7/3-tour.mdx
@@ -17,9 +17,7 @@ _But she has a boyfriend so you are jealous._
 ### TREE HOUSES
 
 <C.HotelNights date={'2014-11-04'} nights={1} />
-
 <C.Img src={'treehouse-1.jpg'} />
-
 <C.Img src={'treehouse-2.jpg'} />
 
 ## BANGKOK
@@ -31,8 +29,12 @@ _But she has a boyfriend so you are jealous._
 ## Moondance
 
 <C.HotelNights date={'2014-11-12'} nights={1} />
-
-<C.Map walking={['10.085781,99.825095,Crystal Dive', '10.0780687,99.8458561,Moondance Magic View Bungalow']} />
+<C.Map
+  walking={[
+    '10.085781,99.825095,Crystal Dive',
+    '10.0780687,99.8458561,Moondance Magic View Bungalow',
+  ]}
+/>
 
 ...
 
