--- a/src/pages/docs/tour/thailand-tour:chiangmai-treehouse.mdx
+++ b/src/pages/docs/tour/thailand-tour:chiangmai-treehouse.mdx
@@ -1,9 +1,7 @@
 import Map from '@/components/map';
 import TreeHouseGirl from './tree-house-girl.jpg';
 
-## Tree House
-
-<Map aerial points={["18.983908, 99.124138"]} center={"18.983908, 99.124138"} />
+## Tree House<Map aerial points={["18.983908, 99.124138"]} center={"18.983908, 99.124138"} />
 <Map aerial walking={["18.983908,99.124138,Rabeang Pasak Treehouse Resort", "18.9869287,99.1186256,จุดชมวิวแผ่นดินหวิด"]} />
 <Map aerial walking={["18.983908,99.124138,Rabeang Pasak Treehouse Resort", "18.981513,99.116642,."]} />
 <img src={TreeHouseGirl} />
