--- a/src/pages/docs/t7/6-tour.mdx
+++ b/src/pages/docs/t7/6-tour.mdx
@@ -8,7 +8,13 @@ import C from '@/components';
 
 Surat Thani Transport Station - Khao Lak
 
-<C.Map driving={["9.1438932,99.3283169,Surat Thani Transport Station","8.9006588,98.5198817,Khao Sok Bus Stop","8.6668406,98.2527142,Khao Lak"]} />
+<C.Map
+  driving={[
+    '9.1438932,99.3283169,Surat Thani Transport Station',
+    '8.9006588,98.5198817,Khao Sok Bus Stop',
+    '8.6668406,98.2527142,Khao Lak',
+  ]}
+/>
 
 ## KOH SIMILAN 2
 
@@ -18,7 +24,17 @@ Awaked at 5 a.m, Lomprayah's bus terminal - Donsak Pier - Koh Phangan Thong Sala
 
 541km, 18 hrs, of course short sleep, a carefully caculately roadmap, a great escape, what do you want?
 
-<C.Map driving={[ '8.644791,98.251189,Khao Lak Scuba Adventures', '7.917718,98.395462,Phuket Bus Terminal 2', '8.102171,98.907734,Krabi', '8.077127,98.904208,Lomprayah', '9.318253,99.736982,Donsak', '9.709127,99.984432,Thong Sala', '9.671759,100.067371,Rin Nai', ]} />
+<C.Map
+  driving={[
+    '8.644791,98.251189,Khao Lak Scuba Adventures',
+    '7.917718,98.395462,Phuket Bus Terminal 2',
+    '8.102171,98.907734,Krabi',
+    '8.077127,98.904208,Lomprayah',
+    '9.318253,99.736982,Donsak',
+    '9.709127,99.984432,Thong Sala',
+    '9.671759,100.067371,Rin Nai',
+  ]}
+/>
 
 ## KOH PHANGAN 2
 
