--- a/src/pages/docs/t7/3-tour.mdx
+++ b/src/pages/docs/t7/3-tour.mdx
@@ -24,6 +24,8 @@ _But she has a boyfriend so you are jealous._
 
 ## KOH TAO
 
+<C.Img src={'crystal.jpg'} />
+
 <C.CImg src="kohtao1.jpg" />
 
 ## Moondance
