--- a/src/pages/docs/t7/7-tour.mdx
+++ b/src/pages/docs/t7/7-tour.mdx
@@ -60,6 +60,6 @@ green dreadlocks in dark
 
 <br />
 
-<C.CImg src="IMG_20170413_234141.jpg" />
+<C.CImg src="IMG_20170413_234141.jpg" strict />
 
 ## SONGKRAN 205X
