--- a/src/pages/docs/t7/4-tour.mdx
+++ b/src/pages/docs/t7/4-tour.mdx
@@ -4,6 +4,8 @@ import C from '@/components';
 
 ## BANGKOK
 
+<C.Img src={'baiyokesky-1.jpg'} />
+
 ## KOH TAO
 
 You think I waste time taking photographs of the sky.
