--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -26,6 +26,13 @@ _What are you doing in thailand? Tourist? You go to Patpong? See smoke from puss
 
 _- The Beach, 2000_
 
+
+<C.Img src={'yinjiaoqin1.jpg'} />
+
+<C.Img src={'yinjiaoqin2.jpg'} />
+
+_@yinjiaoqin_
+
 ### PRATUNAM
 
 <C.HotelNights date={'2013-10-08'} nights={4} />
