--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -126,7 +126,15 @@ I'm riding in the road and say 'hello' to everyone I saw..
 
 ## CHIANG MAI 1
 
-<C.Map walking={['18.7964248,98.9940416,Royal Panerai Hotel', '18.7913966,98.9962615,.', '18.7908862,99.0016427,Flower market', '18.7900200,99.0019467,Restaurant','18.7902466,98.9933392,Store','18.7964248,98.9940416,Royal Panerai Hotel']} />
+<C.Map walking={[
+'18.7964248,98.9940416,Royal Panerai Hotel',
+'18.7913966,98.9962615,.',
+'18.7931204,98.9994647,.',
+'18.7908862,99.0016427,Flower market',
+'18.7900200,99.0019467,Restaurant',
+'18.7902466,98.9933392,Store',
+'18.7964248,98.9940416,Royal Panerai Hotel'
+]} />
 
 ### SARA
 
