--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -128,11 +128,12 @@ I'm riding in the road and say 'hello' to everyone I saw..
 
 <C.Map walking={[
 '18.7964248,98.9940416,Royal Panerai Hotel',
-'18.7913966,98.9962615,.',
-'18.7931204,98.9994647,.',
-'18.7908862,99.0016427,Flower market',
+'18.7985869,98.9949150,Buffet',
+'18.7962411,98.9993346,Fresh Fruits Market',
+'18.7931204,98.9994647,Nakhon Ping Bridge',
+'18.7908862,99.0016427,Flowers Market',
 '18.7900200,99.0019467,Restaurant',
-'18.7902466,98.9933392,Store',
+'18.7902466,98.9933392,Book Store',
 '18.7964248,98.9940416,Royal Panerai Hotel'
 ]} />
 
