--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -40,6 +40,9 @@ Noises can be heard through the sealed window of 9th floor.
 
 ### COWBOY
 
+I met a white guy there who said he working in Chongqing. He's a farang, and he's waiting for his Thai girlfriend.
+We drinked till the thai girl come.
+
 ### NANA
 
 ### UNNIE
