--- a/src/pages/docs/t7/3-tour.mdx
+++ b/src/pages/docs/t7/3-tour.mdx
@@ -28,7 +28,13 @@ _But she has a boyfriend so you are jealous._
 
 <C.CImg src="kohtao1.jpg" />
 
-## Moondance
+### Praness's kitchen
+
+Traditional Thai restaurant at great value price.
+
+<C.Img src={'praness.jpg'} />
+
+### Moondance
 
 <C.HotelNights date={'2014-11-12'} nights={1} />
 <C.Map
