--- a/src/pages/docs/english/pronunciation.mdx
+++ b/src/pages/docs/english/pronunciation.mdx
@@ -1,6 +1,6 @@
 import AutoSpeak from '@/components/auto-speak';
 
-*IPA88*
+_IPA88_
 
 <AutoSpeak>
 
@@ -27,6 +27,7 @@ import AutoSpeak from '@/components/auto-speak';
 - group /gruːp/
 
 ## /aː/
+
 - father /ˈfɑːðə/
 - start /staːt/
 - hard /haːd/
