--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -26,7 +26,6 @@ _What are you doing in thailand? Tourist? You go to Patpong? See smoke from puss
 
 _- The Beach, 2000_
 
-
 <C.Img src={'yinjiaoqin1.jpg'} />
 
 _@yinjiaoqin_
@@ -127,16 +126,18 @@ I'm riding in the road and say 'hello' to everyone I saw..
 
 ## CHIANG MAI 1
 
-<C.Map walking={[
-'18.7964248,98.9940416,Royal Panerai Hotel',
-'18.7985869,98.9949150,Buffet',
-'18.7962411,98.9993346,Fresh Fruits Market',
-'18.7931204,98.9994647,Nakhon Ping Bridge',
-'18.7908862,99.0016427,Flowers Market',
-'18.7900200,99.0019467,Restaurant',
-'18.7902466,98.9933392,Book Store',
-'18.7964248,98.9940416,Royal Panerai Hotel'
-]} />
+<C.Map
+  walking={[
+    '18.7964248,98.9940416,Royal Panerai Hotel',
+    '18.7985869,98.9949150,Buffet',
+    '18.7962411,98.9993346,Fresh Fruits Market',
+    '18.7931204,98.9994647,Nakhon Ping Bridge',
+    '18.7908862,99.0016427,Flowers Market',
+    '18.7900200,99.0019467,Restaurant',
+    '18.7902466,98.9933392,Book Store',
+    '18.7964248,98.9940416,Royal Panerai Hotel',
+  ]}
+/>
 
 ### SARA
 
