--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -26,9 +26,7 @@ _What are you doing in thailand? Tourist? You go to Patpong? See smoke from puss
 
 _- The Beach, 2000_
 
-<C.Img src={'yinjiaoqin1.jpg'} />
-
-_@yinjiaoqin_
+<C.Img src={'yinjiaoqin1.jpg'} alt="https://www.instagram.com/p/B02HcpUpO84/" />
 
 ### PRATUNAM
 
