--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -30,6 +30,8 @@ _- The Beach, 2000_
 
 ### PRATUNAM
 
+#### BAIYOKE SUITE HOTEL
+
 <C.HotelNights date={'2013-10-08'} nights={4} />
 
 Road racers, traffic whistle, dove and the air-conditioning.
