--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -84,6 +84,7 @@ Soon, I arrived.
     '17.032004,99.702915,_',
     '17.031670,99.706329,Baan Rim Klong Resort',
   ]}
+  zoom={13}
 />
 
 ### Baan Rim Klong Resort
