--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -169,6 +169,8 @@ _#SARA#_
 
 ### PRATUNAM 2
 
+#### BAIYOKE SUITE HOTEL
+
 I can't sleep.
 I lies on the bed, listening to the sound of upstairs engaging in noisy sex.
 He and his Thai girl did keep me awake. That's Ok, he's on holiday.
