--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -8,14 +8,18 @@ import C from '@/components';
 
 <C.Cryptor>3634fdd8beb043ac07410e73</C.Cryptor>
 
+### MAEILYNE
+
 ## MABUL 1
+
+### UNCLE CHANG BANGELOW
+
+<C.Map points={['4.2477133,118.6271726']} />
 
 <C.Img src={'mabul-1.jgp'} />
 <C.Img src={'mabul-2.jpg'} />
 
 ## KOTA KINABALU 2
-
-### MAEILYNE
 
 ## GERGORE TOWN
 
