--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -10,7 +10,12 @@ import C from '@/components';
 
 ### SAPI
 
-<C.Map points={['6.0093078,116.00786']} />
+<C.Map
+  driving={[
+    '5.9834548,116.0775237,Borneo Backpackers',
+    '6.0093078,116.00786,Sapi Island',
+  ]}
+/>
 
 ## MABUL 1
 
