--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -30,6 +30,8 @@ import C from '@/components';
 
 ### MAEILYNE
 
+<C.Map points={['5.9830424,116.0764658']} />
+
 ## GERGORE TOWN
 
 <C.Cryptor>3226e6c2f7854f</C.Cryptor>
