--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -162,6 +162,8 @@ She can build a big house back home. A "Farangs" is a simply a "sugar daddy" to 
 _#SARA#_
 
 <C.Map points={['18.7840584,98.9978128,16']} />
+Loi Kroh Boxing Stadium
+
 <C.Cryptor>363aeb</C.Cryptor>, her name.
 <C.CImg src="mob.jpg" />
 
