--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -8,9 +8,12 @@ import C from '@/components';
 
 <C.Cryptor>3634fdd8beb043ac07410e73</C.Cryptor>
 
+<C.Map points={['6.0093078,116.00786']} />
+
+
 ### SAPI
 
-<C.Map points={['5.9834548,116.0775237','6.0093078,116.00786']} />
+<C.Map points={['5.9834548,116.0775237']} />
 
 ## MABUL 1
 
