--- a/src/pages/docs/t7/7-tour.mdx
+++ b/src/pages/docs/t7/7-tour.mdx
@@ -2,9 +2,22 @@ import C from '@/components';
 
 # TOUR SENVEN MEMORY
 
-## KK MOUNTAIN
+## MOUNT KINABALU
+
+### LOW'S PEAK
+
+_The last leg of a journey just marks the halfway point._
+
+I slipped on a rock and my knees hit, just at the feat of peak.
+I imagined that I stood at the peak, no sunrise, saw what I've saught on photos, lonely.
+Then I give up. It's necessary to protect my kness as I will go scuba dive days later.
+
+I hit my kness twice again when desend.
 
 ## KOTA KINIBALU 3
+
+My kness can not band, extremely pantful pain when walk.
+I slowly move to a drug store,
 
 ## SEA VENTURES
 
