--- a/src/pages/docs/t7/7-tour.mdx
+++ b/src/pages/docs/t7/7-tour.mdx
@@ -2,7 +2,28 @@ import C from '@/components';
 
 # TOUR SENVEN MEMORY
 
+2 AM, 4 hrs, flight to KULA LUMPUR.
+KOTA KINABALU from 9 Am to 12 Am, directly.
+Airport bus to bus station, and mini bus to park.
+
+<C.Map
+  driving={[
+    '5.9436606,116.0487216,KKIA Terminal 2',
+    '5.9809019,116.0763801,Airport Bus Station',
+    '6.0076652,116.5425745,Mount Kinabalu National Park',
+    '6.0113287,116.5388984,Hill Lodge',
+  ]}
+/>
+
 ## MOUNT KINABALU
+
+<C.Map
+  walking={[
+    '6.0291003,116.5462398,Timpohon Gate',
+    '6.0589064,116.5651771,Laban Rata Resthouse',
+    '6.0752333,116.5584096,Gunung Kinabalu',
+  ]}
+/>
 
 ### LOW'S PEAK
 
@@ -20,6 +41,12 @@ My kness can not band, extremely pantful pain when walk.
 I slowly move to a drug store,
 
 ## SEA VENTURES
+
+Paradise but not Sipadan, located just off shore Mabul Island. Minutes away from the Rig, the dive site is made up of artificial house reef where old dive boats were sunk, man-made structure such as pyramids and crates are now home to abundance of marine life. The artificial reef is a collaboration work of resorts within and nearby Mabul.
+
+It named "Paradise 2".
+
+<C.Map aerial zoom={15} points={['4.250431,118.630882']} />
 
 ## KOH SAMUI
 
