--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -111,6 +111,16 @@ _I still remember the golden doggy Latu and the pussy Momo._
 
 _- My review on agoda.com_
 
+After meal, the day just black out. And I can't recognize the way back in the black. The sense of direction told me I should ride to north. And I am far away from main road.
+
+There's no light on the road, also my bike. I ride with feeling, and ride faster in the black. Tons of flies hit my face, and I tasted some. After crossing, I feel a river beside me, like a square river. The Wat Phrapai Luang I am confident.
+
+I met motorbike with a beam headlight riding opposite me that I believe which win't see me. So I have to stop my bike beside the road.
+
+At the cross, I saw fireflies, two or three. Not light in the dark, but beautiful.
+
+<C.Map walking={[ '17.020809,99.693417,Store', '17.031913,99.702393,Fireflies', '17.031670,99.706329,Baan Rim Klong Resort', ]} />
+
 <C.Img src={'latu.jpg'} />
 
 _@thongmuanthecrispyrolldog_
