--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -119,7 +119,7 @@ I met motorbike with a beam headlight riding opposite me that I believe which wi
 
 At the cross, I saw fireflies, two or three. Not light in the dark, but beautiful.
 
-<C.Map walking={[ '17.020809,99.693417,Store', '17.031913,99.702393,Fireflies', '17.031670,99.706329,Baan Rim Klong Resort', ]} />
+<C.Map walking={[ '17.022397,99.687335,Restaurant', '17.031913,99.702393,Fireflies', '17.031670,99.706329,Baan Rim Klong Resort', ]} />
 
 <C.Img src={'latu.jpg'} />
 
