--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -60,6 +60,13 @@ We drinked till the thai girl come.
 
 ## SUKHOTHAI
 
+<C.Map
+  driving={[
+    '13.813143,100.548074,Mo Chit Bus Station',
+    '17.014624,99.812901,Sukhothai Bus Terminal',
+  ]}
+/>
+
 Bus stop in downtown, I head to songthaew.
 I asked a discount to ancient city, driver said yes.
 After, he told dropping me off at old town east.
@@ -144,6 +151,12 @@ I'm riding in the road and say 'hello' to everyone I saw..
 <C.Map walking={[ '17.0247242,99.7038567,North Gate', '17.018468,99.710928,7-Eleven' ]} />
 
 ### ON THE ROAD
+
+<C.Map
+  driving={[
+    '17.018732,99.712043,Wintour Bus Station',
+  ]}
+/>
 
 #### GEM
 
