--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -155,6 +155,7 @@ I'm riding in the road and say 'hello' to everyone I saw..
 <C.Map
   driving={[
     '17.018732,99.712043,Wintour Bus Station',
+    '18.799716,99.017627,Chiang Mai Bus Terminal 3'
   ]}
 />
 
