--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -6,16 +6,38 @@ import C from '@/components';
 
 ## KOTA KINABALU 1
 
+<C.Map
+  driving={[
+    '5.943993,116.050642,KKIA Terminal 2',
+    '6.0093078,116.00786,Borneo Backpackers',
+  ]}
+/>
+
+A couple get on the bus, sit behind me. They talked about is this bus go downtown.
+I turned and told them it did. They are lovers, from Wuhan.
+Fall in love by riding. They just stay near by my hostel.
+
 <C.Cryptor>3634fdd8beb043ac07410e73</C.Cryptor>
-
-<C.Map points={['6.0093078,116.00786']} />
-
 
 ### SAPI
 
 <C.Map points={['5.9834548,116.0775237']} />
 
 ## MABUL 1
+
+My phone out of power after landing. I found a sim card store for charging.
+I missed the transform. A guy ask to buy a SIM card,I ask can I take a ride.
+Then I found we start at the same hostel. Brasil.
+
+<C.Map
+  driving={[
+    '4.313783,118.113794,Tawau Airport',
+    '4.479184,118.617147,Borneo Global Sipadan Backpackers',
+  ]}
+/>
+
+Arrive I met feng cheche.
+And she will go penang after semporna.
 
 ### UNCLE CHANG BANGELOW
 
