--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -39,6 +39,8 @@ Then I found we start at the same hostel. Brasil.
 Arrive I met feng cheche.
 And she will go penang after semporna.
 
+<C.Img src={'dd.jpg'} />
+
 ### UNCLE CHANG BANGELOW
 
 <C.Map points={['4.2477133,118.6271726']} />
@@ -53,6 +55,8 @@ And she will go penang after semporna.
 <C.Map points={['5.9830424,116.0764658']} />
 
 ## GERGORE TOWN
+
+<C.Img src={'gt-2.jpg'} />
 
 <C.Cryptor>3226e6c2f7854f</C.Cryptor>
 
