--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -28,6 +28,8 @@ _- The Beach, 2000_
 
 <C.Img src={'yinjiaoqin1.jpg'} alt="https://www.instagram.com/p/B02HcpUpO84/" />
 
+<C.Imgs items={[{src: 'yinjiaoqin1.jpg'},{src: 'yinjiaoqin1.jpg'},{src: 'yinjiaoqin1.jpg'}]} />
+
 ### PRATUNAM
 
 #### BAIYOKE SUITE HOTEL
