--- a/src/pages/docs/t7/3-tour.mdx
+++ b/src/pages/docs/t7/3-tour.mdx
@@ -17,8 +17,8 @@ _But she has a boyfriend so you are jealous._
 ### TREE HOUSES
 
 <C.HotelNights date={'2014-11-04'} nights={1} />
-<C.Img src={'treehouse-1.jpg'} />
 <C.Img src={'treehouse-2.jpg'} />
+<C.Imgs col={2} items={[{src: 'treehouse-1.jpg'},'treehouse-2.jpg']} />
 
 ## BANGKOK
 
