--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -52,6 +52,8 @@ And she will go penang after semporna.
 
 ### MAEILYNE
 
+You are far from home. You meet a girl. It's exciting, why not? You are attracted to her - it's in your eyes. Perhaps in hers as well. So you think something might happen; it's easy to believe, it's exciting. But she has a boyfriend so you are jealous.
+
 <C.Map points={['5.9830424,116.0764658']} />
 
 ## GERGORE TOWN
