--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -62,6 +62,23 @@ You are far from home. You meet a girl. It's exciting, why not? You are attracte
 
 <C.Cryptor>3226e6c2f7854f</C.Cryptor>
 
+
+
+
+### BAR
+
+<C.Map
+  walking={[
+    '5.418435,100.335625,Halab Penang',
+    '5.418612,100.336421,Love Ln',
+    '5.420208,100.335220,Ryokan Muntri Boutique Hostel',
+  ]}
+/>
+
+On road back, just passed 7-Eleven corner, at the beginning of Love Ln I walk outside and girls walked inside.
+A motorcycle with two guys race beside me, I saw the guy in the back strangely stared us.
+Few seconds later motor with two policemen pass by, one of policeman look at us, seems like to checking if we are okay.
+
 Night bar, riding danger
 
 ## KULA LUMPUR 2
