--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -81,4 +81,24 @@ Few seconds later motor with two policemen pass by, one of policeman look at us,
 
 Night bar, riding danger
 
+### NIGHT FOOD
+
+<C.Map
+  walking={[
+    '5.420208,100.335220,Ryokan Muntri Boutique Hostel',
+    '5.418612,100.336421,Love Ln',
+    '5.416457,100.332673,Kimberley Street Food Night Market',
+  ]}
+/>
+
+### PENANG HILL
+
+<C.Map
+  walking={[
+    '5.423528,100.269514,Penang Hill Upper Station',
+    '5.418529,100.263881,Ice cream store',
+    '5.4181686,100.2628177,Monkeys',
+  ]}
+/>
+
 ## KULA LUMPUR 2
